<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:background="@drawable/bg_reg">

    <TextView
        android:id="@+id/admin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:textSize="35sp"
        android:text="@string/auth_btn" />

    <EditText
        android:id="@+id/item_field"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/admin_label"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="20sp"
        android:hint="@string/number"
        android:textColorHint="@color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:textSize="18sp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_below="@+id/item_field"
        android:layout_marginTop="20sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:textSize="18sp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/entry_btn"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/reg_btn"
        android:fontFamily="@font/roboto_slab_bold"
        android:padding="10sp"
        android:text="@string/entry_btn"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>