<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    android:background="@drawable/bg_reg">

    <TextView
        android:id="@+id/cart_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:text="@string/cart_label"/>

    <ListView
        android:id="@+id/cart_view"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@id/cart_label"
        android:layout_marginTop="90sp"
        android:layout_above="@+id/clear_btn"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="170sp"
        android:layout_height="50sp"
       android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="20sp"
        android:layout_toStartOf="@+id/total_btn"
        android:background="@drawable/reg_btn"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/clear_btn"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <Button
        android:id="@+id/total_btn"
        android:layout_width="170sp"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20sp"
        android:background="@drawable/reg_btn"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/total_btn"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>